Trying to fix missing fonts on mobile

--- a/assets/css/wordart.css
+++ b/assets/css/wordart.css
@@ -50,7 +50,7 @@ dl.style-3 .wordart .preview {
   text-shadow: 3px 2px 0 #999;
 }
 dl.style-4 .wordart .preview {
-  font-family: Times New Roman, serif;
+  font-family: 'Times New Roman',Times, serif;
   font-weight: 400;
   color: #369;
   text-shadow: 2px 1px 0 #c1c1c1;
@@ -187,7 +187,7 @@ dl.style-11 .wordart .preview::before {
   transform: rotateX(63deg) skew(60deg) scaleY(0.65) translate3d(2em, -2.15em, -1em);
 }
 dl.style-12 .wordart .preview {
-  font-family: Times New Roman, serif;
+  font-family: 'Times New Roman',Times, serif;
   font-weight: 400;
   color: transparent;
   background: linear-gradient(#999cfc, #1b999c);
@@ -218,7 +218,7 @@ dl.style-14 .wordart {
   transform: scale(0.85, 1.3) translateZ(0);
 }
 dl.style-14 .wordart .preview {
-  font-family: Times New Roman, serif;
+  font-family: 'Times New Roman',Times, serif;
   font-weight: 400;
   background: linear-gradient(#fffecb, #f99);
   -webkit-text-fill-color: transparent;
@@ -287,7 +287,7 @@ dl.style-18 .wordart {
   transform: scaleY(1.5) translateZ(0);
 }
 dl.style-18 .wordart .preview {
-  font-family: Times New Roman, serif;
+  font-family: 'Times New Roman',Times, serif;
   font-weight: 400;
   background: linear-gradient(#b6b6b6 0%, #5f5f5f 20%, #b1b1b1 30%, #fff 64%, #6c6c6c 65%, #373737 66%, #515151 67%, #787878 75%, #d2d2d2 80%, #d2d2d2 100%);
   -webkit-text-fill-color: transparent;
